sumo/tests/traci/ChangeRoute/InvalidEdge/errors.traci
Error: Answered with error to command 48: Could not set travel time properly
Error while receiving command: tcpip::Socket::receive() @ recv: Software caused tcpip::Socket abort
Error while sending command: send failed: Software caused tcpip::Socket abort
